--- a/index.html
+++ b/index.html
@@ -6,64 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Portfolio 2021</title>
-</head>
 
-<body>
-    <nav>
-        <div class="logo">Vershard<strong>Portfolio</strong></div>
-        <ul class="links">
-            <li><a href="#html logo">Html logo</a></li>
-            <li><a href="#css logo">CSS logo</a></li>
-            <li><a href="#flexbox logo">Flexbox logo</a></li>
-            <li><a href="#full-stack logo">Full-stack logo</a></li>
+<body> 
+    <div class= "header">
+            <img src="self-pic.JPG" class="rounded float-left" alt="Image" class="img-thumbnail">
+            <h1 class="display-4 ">Hey I'm Vershard, a Full Stack Web Dev</h1>
+        </div>
+    
 
-        </ul>
+    <nav class="navbar navbar-light bg-light ">
+        <form class="form-inline"> 
+            <button class="btn btn-outline-primary btn-lg" type="button">About me</button>
+            <button class="btn btn-outline-success btn-lg" type="button">Projects</button>
+            <button class="btn btn-outline-danger btn-lg" type="button">Contact Me</button>
 
     </nav>
 
-    <div>
 
-        <section class=" About-me">
-            <h2>About me</h2>
-            <p>My name is Vershard Thomas I am currently attending Richard Bland College as a computer science major with the goal of
-                becoming a software engineer after graduation.</p> 
-        </section>
-        <section class=" Work">
-            <h3>Work</h3>
-            <div class="row">
-                <img src="html.jpg" alt="Image of html doc">
-            </div>
+    
 
-            <div class="row">
-                <div class="card">
-                    <header>Html logo</header>
-                    <img src="./html5-logo.jpg" alt="Image of html logo" style="width:100%;" />
-                </div>
-                <div class="card">
-                    <header>CSS logo</header>
-                    <img src="CSS.jpg" alt="Image of css logo" style="width: 100%;" />
-                </div>
-                <div class="card">
-                    <header>Flexbox logo</header>
-                    <img src="flexbox.jpg" alt="Image of flexbox" style="width: 100%;" />
-                </div>
-                <div class="card">
-                    <header>Full-stack logo</header>
-                    <img src="full-stack.jpg" alt="Image of html logo" style="width: 100%;" />
-                </div>
 
-            </div>
 
-        </section>
 
-        <section class=" Contact-me">
-            <h4>Contact-me</h4>
-            <div class="row">
-                <div> 804.222.1111 vtbootcamp@gmail.com Github Twitter Linkin </div>
 
-        </section>
-    </div>
+<div style = "margin-top: 600px;"></div>
 </body>
+
+
 
 </html>
