--- a/index.html
+++ b/index.html
@@ -31,37 +31,36 @@
     </div>
     <br>
     <!-- About Me  -->
-    <div class="container-fluid bg-primary">
+    <div class="container-fluid bg-primary text-white">
         <h2 class="text-center"> About Me</h2>
     </div>
     <!-- Card -->
-    <div class= "container">
+    <div class= "container d-flex justify-content-center">
         <div class="row">
-            <div class="col-md-4">
-                <div class="card text-center" style="width: 18rem;">
+            <div class="col-6">
+                <div class="card text-center" style="width: 25rem;">
                     <img src="richardblandcollege.jpg" class="img-fluid rounded" alt="Image">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-4">
-                <div class="card text-center" style="width: 18rem;">
+            <div class="col-6">
+                <div class="card text-center" style="width: 25rem;">
                     <img src="UR.jpg" class="img-fluid rounded" alt="Image">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+<br> 
+
+    <div class="card text-primary">
+        <div class="card-body">
+            Insprired with a passion to create quality products and learn new skills that can be added to my arsenal of programming languages. With an electrical and computer science background I am able to make use of my problem solving skills along with working on a team. I earned a Certificate in Full-Stack Web Development from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, JavaScript, React JS, Node.js, Express.js, jQuery, SQL, and Bootstrap. Using my knowledge of theory programming from receiving an associates degree in computer science, my ambition is to create products anyone can enjoy and being a valuable asset to my team.   
+        </div>
+      </div>
 
     <br>
     <!-- Projects -->
