--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="img-container">
             <img src="self-pic.JPG" class="img-fluid rounded-circle" alt="Image">
         </div>
-        <h1 class="display-4 container">Hey, I'm Vershard a Full Stack Web Dev</h1>
+        <h1 class="display-4 container">Hey, I'm Vershard a Full-Stack Web Developer</h1>
     </div>
 
 
@@ -34,8 +34,8 @@
     <div class="container-fluid bg-primary text-white">
         <h2 class="text-center"> About Me</h2>
     </div>
-    <!-- Card -->
-    <div class= "container d-flex justify-content-center">
+    <!-- Cards -->
+    <div class="container d-flex justify-content-center">
         <div class="row">
             <div class="col-6">
                 <div class="card text-center" style="width: 25rem;">
@@ -54,16 +54,80 @@
             </div>
         </div>
     </div>
-<br> 
+    <br>
 
     <div class="card text-primary">
         <div class="card-body">
-            Insprired with a passion to create quality products and learn new skills that can be added to my arsenal of programming languages. With an electrical and computer science background I am able to make use of my problem solving skills along with working on a team. I earned a Certificate in Full-Stack Web Development from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, JavaScript, React JS, Node.js, Express.js, jQuery, SQL, and Bootstrap. Using my knowledge of theory programming from receiving an associates degree in computer science, my ambition is to create products anyone can enjoy and being a valuable asset to my team.   
+            Insprired with a passion to create quality products and learn new skills that can be added to my arsenal of
+            programming languages. With an electrical and computer science background I am able to make use of my
+            problem solving skills along with working on a team. I earned a Certificate in Full-Stack Web Development
+            from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, JavaScript,
+            React JS, Node.js, Express.js, jQuery, SQL, and Bootstrap. Using my knowledge of theory programming from
+            receiving an associates degree in computer science, my ambition is to create products anyone can enjoy and
+            being a valuable asset to my team.
         </div>
-      </div>
+    </div>
 
     <br>
     <!-- Projects -->
+    <div class="container-fluid bg-success text-white">
+        <h2 class="text-center"> Projects</h2>
+    </div>
+
+    <br>
+
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators"> 
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="weather-dashboard.JPG" class="d-block w-100" alt="Weather">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="horisen.JPG" class="d-block w-100" alt="Horisen">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="crypto-tracker.JPG" class="d-block w-100" alt="Crypto">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
