--- a/index.html
+++ b/index.html
@@ -75,52 +75,92 @@
     </div>
 
     <br>
+    <div class="container">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+            </div>
+            <!-- Carousel Images -->
 
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+            <div id="carousel" class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <a href=" https://vershard.github.io/Weather-dashboard/" target="_blank">
+                        <img src="weather-dashboard.JPG" class="rounded alt=" Image">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <p class="text-white bg-dark">A application to find a weather condition of any given city, both
+                            the
+                            current and five day forecast at the same time.</p>
+                    </div>
+                </div>
+                <div id="carousel" class="carousel-item" data-bs-interval="2000">
+                    <a href=" https://vershard.github.io/HorisenHomework/" target="_blank">
+                        <img src="horisen.JPG" class="rounded" alt="Horisen">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <p class="text-white bg-dark"> A social media marketing service that helps you determine which
+                            platforms are suited
+                            to your brand.</p>
+                    </div>
+                </div>
+                <div id="carousel" class="carousel-item">
+                    <a href=" https://apalmer37.github.io/Crypto_Tracker_Project/" target="_blank">
+                        <img src="crypto-tracker.JPG" class="rounded" alt="Crypto">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <p class="text-white bg-dark"> An app used to display the current prices of crypto's and give
+                            retail
+                            traders a better insight of the market.</p>
+                    </div>
+                </div>
+                <div id="carousel" class="carousel-item">
+                    <a href="https://vershard.github.io/Password-Generator/" target="_blank">
+                        <img src="password-generator.JPG" class="rounded" alt="Crypto">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <p class="text-white bg-dark"> An app used to generate multiple passwords using a variety of
+                            numbers, letters, and special characters.</p>
+                    </div>
+                </div>
+                <div id="carousel" class="carousel-item">
+                    <a href=" https://vershard.github.io/Work-day-scheduler/" target="_blank">
+                        <img src="workday-scheduler.JPG" class="rounded" alt="Crypto">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <p class="text-white bg-dark"> A simple app created as a online daily planner.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div id="carousel" class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-                <img src="weather-dashboard.JPG" class="rounded alt="Weather">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
-            </div>
-            <div id="carousel" class="carousel-item" data-bs-interval="2000">
-                <img src="horisen.JPG" class="rounded" alt="Horisen">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                </div>
-            </div>
-            <div id="carousel" class="carousel-item">
-                <img src="crypto-tracker.JPG" class="rounded" alt="Crypto">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
 
+    <br>
+    <!-- Contact Me -->
 
+    <div class="container-fluid bg-danger text-white">
+        <h2 class="text-center"> Contact Me</h2>
+    </div>
 
-
+    <br>
 
 
 
