--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <div class="container-fluid">
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-outline-primary btn-lg" type="button">About Me</button>
-            <button class="btn btn-outline-success btn-lg" type="button">Projects</button>
-            <button class="btn btn-outline-danger btn-lg" type="button">Contact Me</button>
+            <a class="btn btn-outline-primary btn-lg" href="#About-me" role="button">About Me</a>
+            <a class="btn btn-outline-success btn-lg" href="#Projects" role="button">Projects</a>
+            <a class="btn btn-outline-danger btn-lg" href="#Contact-me" role="button">Contact Me</a>
         </div>
     </div>
     <br>
     <!-- About Me  -->
-    <div class="container-fluid bg-primary text-white">
+    <div div id="About-me" class="container-fluid bg-primary text-white">
         <h2 class="text-center"> About Me</h2>
     </div>
     <!-- Cards -->
@@ -55,7 +55,7 @@
         </div>
     </div>
     <br>
-
+    <!-- Card Text -->
     <div class="card text-primary">
         <div class="card-body">
             Insprired with a passion to create quality products and learn new skills that can be added to my arsenal of
@@ -70,12 +70,13 @@
 
     <br>
     <!-- Projects -->
-    <div class="container-fluid bg-success text-white">
+    <div div id="Projects" class="container-fluid bg-success text-white">
         <h2 class="text-center"> Projects</h2>
     </div>
 
     <br>
     <div class="container">
+        <!-- Carousel Buttons -->
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -156,27 +157,25 @@
     <br>
     <!-- Contact Me -->
 
-    <div class="container-fluid bg-danger text-white">
+    <div div id="Contact-me" class="container-fluid bg-danger text-white">
         <h2 class="text-center"> Contact Me</h2>
     </div>
 
     <br>
 
+    <div class="text-center">
+        <h2> Email- Vershardthomas@gmail.com</h2>
+        <h2> LinkedIn- Vershard T</h2>
+    </div>
+    <br>
+    <div class="container">
+        <img src="coding-background.jpg" alt="Coding" class="center">
+    </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-    <div style="margin-top: 600px;"></div>
+    <div style="margin-top: 200px;"></div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
