--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="img-container">
             <img src="self-pic.JPG" class="img-fluid rounded-circle" alt="Image">
         </div>
-        <h1 class="display-4 container">Hey, I'm Vershard a Full-Stack Web Developer</h1>
+        <h1 class="display-4 container">Hey, I'm Vershard a Front-End Web Developer</h1>
     </div>
 
 
@@ -61,8 +61,8 @@
             Insprired with a passion to create quality products and learn new skills that can be added to my arsenal of
             programming languages. With an electrical and computer science background I am able to make use of my
             problem solving skills along with working on a team. I earned a Certificate in Full-Stack Web Development
-            from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, JavaScript,
-            React JS, Node.js, Express.js, jQuery, SQL, and Bootstrap. Using my knowledge of theory programming from
+            from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, Bootstarp, JavaScript,
+            React JS, Node.js, Express.js, jQuery, MySQL, and Sequelize. Using my knowledge of theory programming from
             receiving an associates degree in computer science, my ambition is to create products anyone can enjoy and
             being a valuable asset to my team.
         </div>
@@ -75,86 +75,76 @@
     </div>
 
     <br>
-    <div class="container">
-        <!-- Carousel Buttons -->
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
-            </div>
-            <!-- Carousel Images -->
 
-            <div id="carousel" class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <a href=" https://vershard.github.io/Weather-dashboard/" target="_blank">
-                        <img src="weather-dashboard.JPG" class="rounded alt=" Image">
-                    </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-white bg-dark">A application to find a weather condition of any given city, both
-                            the
-                            current and five day forecast at the same time.</p>
-                    </div>
-                </div>
-                <div id="carousel" class="carousel-item" data-bs-interval="2000">
-                    <a href=" https://vershard.github.io/HorisenHomework/" target="_blank">
-                        <img src="horisen.JPG" class="rounded" alt="Horisen">
-                    </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-white bg-dark"> A social media marketing service that helps you determine which
-                            platforms are suited
-                            to your brand.</p>
-                    </div>
-                </div>
-                <div id="carousel" class="carousel-item">
-                    <a href=" https://apalmer37.github.io/Crypto_Tracker_Project/" target="_blank">
-                        <img src="crypto-tracker.JPG" class="rounded" alt="Crypto">
-                    </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-white bg-dark"> An app used to display the current prices of crypto's and give
-                            retail
-                            traders a better insight of the market.</p>
-                    </div>
-                </div>
-                <div id="carousel" class="carousel-item">
-                    <a href="https://vershard.github.io/Password-Generator/" target="_blank">
-                        <img src="password-generator.JPG" class="rounded" alt="Crypto">
-                    </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-white bg-dark"> An app used to generate multiple passwords using a variety of
-                            numbers, letters, and special characters.</p>
-                    </div>
-                </div>
-                <div id="carousel" class="carousel-item">
-                    <a href=" https://vershard.github.io/Work-day-scheduler/" target="_blank">
-                        <img src="workday-scheduler.JPG" class="rounded" alt="Crypto">
-                    </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="text-white bg-dark"> A simple app created as a online daily planner.</p>
-                    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card">
+                <a href=" https://vershard.github.io/Weather-dashboard/" target="_blank">
+                    <img src="weather-dashboard.JPG" class="card-img-top">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Weather-Dashboard</h5>
+                    <p class="card-text"> A application to find a weather condition of any given city, both
+                        the current and five day forecast at the same time.</p>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
+
+
+        <div class="col">
+        <div class="card" >
+            <a href=" https://vershard.github.io/HorisenHomework/" target="_blank">
+                <img src="horisen.JPG" class="card-img-top" alt="Horisen">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Horisen</h5>
+                <p class="card-text"> A social media marketing service that helps you determine which
+                    platforms are suited to your brand.</p>
+            </div>
+        </div> 
+        </div>
+
+        <div class="col">
+        <div class="card" >
+            <a href=" https://apalmer37.github.io/Crypto_Tracker_Project/" target="_blank">
+                <img src="crypto-tracker.JPG" class="card-img-top" alt="Crypto">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Crypto Tracker</h5>
+                <p class="card-text"> An app used to display the current prices of crypto's and give
+                    retail traders a better insight of the market.</p>
+            </div>
+        </div> 
+        </div>
+
+        <div class="col">
+        <div class="card">
+            <a href="https://vershard.github.io/Password-Generator/" target="_blank">
+                <img src="password-generator.JPG" class="card-img-top" alt="Crypto">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Password-Generator</h5>
+                <p class="card-text">An app used to generate multiple passwords using a variety of
+                    numbers, letters, and special characters.</p>
+            </div>
+        </div> 
+        </div>
+
+        <div class="col">
+        <div class="card">
+            <a href=" https://vershard.github.io/Work-day-scheduler/" target="_blank">
+                <img src="workday-scheduler.JPG" class="card-img-top" alt="Crypto">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Workday-Scheduler</h5>
+                <p class="card-text"> A simple app created as a online daily planner.</p>
+            </div>
+        </div>
+    </div> 
     </div>
 
     <br>
+
     <!-- Contact Me -->
 
     <div div id="Contact-me" class="container-fluid bg-danger text-white">
@@ -177,6 +167,7 @@
 
     <div style="margin-top: 200px;"></div>
 </body>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
