--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Cards -->
     <div class="container d-flex justify-content-center">
         <div class="row">
-            <div class="col-6">
+            <div id="school-image" class="col-6">
                 <div class="card text-center" style="width: 25rem;">
                     <img src="richardblandcollege.jpg" class="img-fluid rounded" alt="Image">
                     <div class="card-body">
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div id="school-image" class="col-6">
                 <div class="card text-center" style="width: 25rem;">
                     <img src="UR.jpg" class="img-fluid rounded" alt="Image">
                     <div class="card-body">
