--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             Insprired with a passion to create quality products and learn new skills that can be added to my arsenal of
             programming languages. With an electrical and computer science background I am able to make use of my
             problem solving skills along with working on a team. I earned a Certificate in Full-Stack Web Development
-            from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, Bootstarp, JavaScript,
-            React JS, Node.js, Express.js, jQuery, MySQL, and Sequelize. Using my knowledge of theory programming from
+            from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, Bootstarp,
+            JavaScript, React JS, Node.js, Express.js, jQuery, MySQL, and Sequelize. Using my knowledge of theory
+            programming from
             receiving an associates degree in computer science, my ambition is to create products anyone can enjoy and
             being a valuable asset to my team.
         </div>
@@ -92,55 +93,70 @@
 
 
         <div class="col">
-        <div class="card" >
-            <a href=" https://vershard.github.io/HorisenHomework/" target="_blank">
-                <img src="horisen.JPG" class="card-img-top" alt="Horisen">
-            </a>
-            <div class="card-body">
-                <h5 class="card-title">Horisen</h5>
-                <p class="card-text"> A social media marketing service that helps you determine which
-                    platforms are suited to your brand.</p>
+            <div class="card">
+                <a href=" https://vershard.github.io/HorisenHomework/" target="_blank">
+                    <img src="horisen.JPG" class="card-img-top" alt="Horisen">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Horisen</h5>
+                    <p class="card-text"> A social media marketing service that helps you determine which
+                        platforms are suited to your brand.</p>
+                </div>
             </div>
-        </div> 
         </div>
 
         <div class="col">
-        <div class="card" >
-            <a href=" https://apalmer37.github.io/Crypto_Tracker_Project/" target="_blank">
-                <img src="crypto-tracker.JPG" class="card-img-top" alt="Crypto">
-            </a>
-            <div class="card-body">
-                <h5 class="card-title">Crypto Tracker</h5>
-                <p class="card-text"> An app used to display the current prices of crypto's and give
-                    retail traders a better insight of the market.</p>
+            <div class="card">
+                <a href=" https://apalmer37.github.io/Crypto_Tracker_Project/" target="_blank">
+                    <img src="crypto-tracker.JPG" class="card-img-top" alt="Crypto">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Crypto Tracker</h5>
+                    <p class="card-text"> An app used to display the current prices of crypto's and give
+                        retail traders a better insight of the market.</p>
+                </div>
             </div>
-        </div> 
         </div>
 
         <div class="col">
-        <div class="card">
-            <a href="https://vershard.github.io/Password-Generator/" target="_blank">
-                <img src="password-generator.JPG" class="card-img-top" alt="Crypto">
-            </a>
-            <div class="card-body">
-                <h5 class="card-title">Password-Generator</h5>
-                <p class="card-text">An app used to generate multiple passwords using a variety of
-                    numbers, letters, and special characters.</p>
+            <div class="card">
+                <a href="https://vershard.github.io/Password-Generator/" target="_blank">
+                    <img src="password-generator.JPG" class="card-img-top" alt="Crypto">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Password-Generator</h5>
+                    <p class="card-text">An app used to generate multiple passwords using a variety of
+                        numbers, letters, and special characters.</p>
+                </div>
             </div>
-        </div> 
         </div>
 
         <div class="col">
-        <div class="card">
-            <a href=" https://vershard.github.io/Work-day-scheduler/" target="_blank">
-                <img src="workday-scheduler.JPG" class="card-img-top" alt="Crypto">
-            </a>
-            <div class="card-body">
-                <h5 class="card-title">Workday-Scheduler</h5>
-                <p class="card-text"> A simple app created as a online daily planner.</p>
+            <div class="card">
+                <a href=" https://vershard.github.io/Work-day-scheduler/" target="_blank">
+                    <img src="workday-scheduler.JPG" class="card-img-top" alt="Crypto">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Workday-Scheduler</h5>
+                    <p class="card-text"> A simple app created as a online daily planner.</p>
+                </div>
             </div>
         </div>
-    </div> 
+
+        <div class="col">
+            <div class="card">
+                <a href=" https://offline-budget-tracker-2021.herokuapp.com/" target="_blank">
+                    <img src="budget-tracker.JPG" class="card-img-top" alt="budget-tracker">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Budget-Tracker</h5>
+                    <p class="card-text"> Giving users a fast and easy way to track their money is important, but
+                        allowing them to access that information anytime is even more important. Having offline
+                        functionality is paramount to our applications success.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <br>
@@ -156,6 +172,7 @@
     <div class="text-center">
         <h2> Email- Vershardthomas@gmail.com</h2>
         <h2> LinkedIn- Vershard T</h2>
+        <h2> Github- Vershard</h2>
     </div>
     <br>
     <div class="container">
