--- a/index.html
+++ b/index.html
@@ -61,11 +61,8 @@
             Insprired with a passion to create quality products and learn new skills that can be added to my arsenal of
             programming languages. With an electrical and computer science background I am able to make use of my
             problem solving skills along with working on a team. I earned a Certificate in Full-Stack Web Development
-            from the University of Richmond coding boot-camp. Where I developed skills using HTML, CSS, Bootstarp,
-            JavaScript, React JS, Node.js, Express.js, jQuery, MySQL, and Sequelize. Using my knowledge of theory
-            programming from
-            receiving an associates degree in computer science, my ambition is to create products anyone can enjoy and
-            being a valuable asset to my team.
+            from the University of Richmond coding boot-camp. I'm knowledgeable in HTML, CSS, JavaScript, React.JS,
+            Node.JS, Python, Java, J2EE, MySQL, SuiteScript, BASH, Powershell, AWS Dynamodb, and AWS Lambda.
         </div>
     </div>
 
@@ -143,7 +140,7 @@
             </div>
         </div>
 
-        <div class="col">
+        <!-- <div class="col">
             <div class="card">
                 <a href=" https://offline-budget-tracker-2021.herokuapp.com/" target="_blank">
                     <img src="budget-tracker.JPG" class="card-img-top" alt="budget-tracker">
@@ -155,7 +152,7 @@
                         functionality is paramount to our applications success.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
